--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
